// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tag should have a link 1`] = `
<scale-tag href="#">
  <mock:shadow-root>
    <a class="tag tag--color-grey tag--link tag--type-standard" href="#" part="base type-standard color-grey link" target="_self">
      <slot></slot>
    </a>
  </mock:shadow-root>
  Label
</scale-tag>
`;

exports[`Tag should match snapshot 1`] = `
<scale-tag>
  <mock:shadow-root>
    <span class="tag tag--color-grey tag--type-standard" part="base type-standard color-grey">
      <slot></slot>
    </span>
  </mock:shadow-root>
  Label
</scale-tag>
`;
